--- a/InvestmentTracker/Pages/Shared/_NavigationPartial.cshtml
+++ b/InvestmentTracker/Pages/Shared/_NavigationPartial.cshtml
@@ -10,7 +10,7 @@
     @if (isExpensesSection)
     {
         <li class="nav-item">
-            <a class="nav-link" asp-area="" asp-page="/Expenses/Index">Dashboard</a>
+            <a class="nav-link" asp-area="" asp-page="/Expenses/Index">Expense Dashboard</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" asp-area="" asp-page="/Expenses/Regular">Recurring Expenses</a>
@@ -19,19 +19,19 @@
             <a class="nav-link" asp-area="" asp-page="/Expenses/FamilyMembers">Family Members</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" asp-area="" asp-page="/Expenses/ExpenseCategories">Categories</a>
+            <a class="nav-link" asp-area="" asp-page="/Expenses/ExpenseCategories">Expense Categories</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" asp-area="" asp-page="/Expenses/IncomeSources">Income Sources</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" asp-area="" asp-page="/Expenses/Budgets">Budgets</a>
+            <a class="nav-link" asp-area="" asp-page="/Expenses/Budgets">Budget Management</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" asp-area="" asp-page="/Expenses/Analysis">Analysis</a>
+            <a class="nav-link" asp-area="" asp-page="/Expenses/Analysis">Expense Analysis</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" asp-area="" asp-page="/Expenses/FinancialScheduleConfig">Financial Schedule Config</a>
+            <a class="nav-link" asp-area="" asp-page="/Expenses/FinancialScheduleConfig">Schedule Settings</a>
         </li>
     }
     else if (isInvestmentsSection)
