--- a/InvestmentTracker/Pages/Expenses/Budgets.cshtml
+++ b/InvestmentTracker/Pages/Expenses/Budgets.cshtml
@@ -16,7 +16,7 @@
             <input type="date" id="selectedDate" name="selectedDate" class="form-control" value="@Model.ViewModel.SelectedDate.ToString("yyyy-MM-dd")" />
         </div>
         <div class="col-auto">
-            <button type="submit" class="btn btn-primary w-100">View</button>
+            <button type="submit" class="btn btn-primary w-100">Update View</button>
         </div>
         <div class="col-auto">
             <div class="btn-group ms-2" role="group">
@@ -35,7 +35,7 @@
         <div class="col-auto">
             <a href="./Index?selectedDate=@Model.ViewModel.SelectedDate.ToString("yyyy-MM-dd")" class="btn btn-secondary w-100">
                 <i class="bi bi-arrow-left"></i>
-                <span class="d-none d-sm-inline ms-1">Back to Expenses</span>
+                <span class="d-none d-sm-inline ms-1">Back to Expense Dashboard</span>
                 <span class="d-sm-none">Back</span>
             </a>
         </div>
